# antarrlib

./: README.md  pyproject.toml
examples/: imaging.ipynb
src/antarrlib/: __init__.py  _mpfit.py  antennaarray.py  decibel.py  fundamental.py  imaging.py  noise.py  periodogram.py  position.py  simulation.py  spherint.py  volume.py
test/: antpos.csv  antptn.csv  imaging.py  position.py  positions.csv  simulation.py  spherint.py  test_frequency.py  test_noise.py  test_radiation_pattern.py  test_reconstruct_x.py  test_simulation.py  test_simulation_complex.py  test_spherint.py  test_spread.py  test_volume.py
