[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "antarrlib"
version = "0.3.2"
description = "Basic operations on antenna array."
authors = ["Taishi Hashimoto <hashimoto.taishi@nipr.ac.jp>"]
packages = [
    { include = "antarrlib", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
